# ssh

./: .gitignore  index.html  package.json  pnpm-lock.yaml  test_disk.sh  tsconfig.json  vite.config.ts
docs/: PTY_SAFETY_CHECKLIST.md  PTY_SAFETY_IMPROVEMENTS.md  PTY_SAFETY_README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  session_manager.rs  websocket_server.rs
src-tauri/src/ssh/: mod.rs  pty_session.rs  tests.rs
src/__tests__/: connection.test.ts
src/components/: alert-thresholds-modal.tsx  alert-viewer.tsx  connection-details.tsx  connection-dialog.tsx  integrated-file-browser.tsx  language-switcher.tsx  log-viewer.tsx  menu-bar.tsx  network-monitor.tsx  pty-terminal.tsx  session-manager.tsx  session-tabs.tsx  settings-modal.tsx  settings-modal2.tsx  sftp-panel.tsx  status-bar.tsx  system-monitor.tsx  terminal.tsx  toolbar.tsx  welcome-screen.tsx
src/components/terminal/addons/: overlay.ts
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dialog.tsx  progress.tsx  resizable.tsx  slider.tsx  switch.tsx  tooltip.tsx
src/lib/: connection-profiles.ts  i18n.ts  keyboard-shortcuts.ts  layout-config.ts  layout-context.tsx  session-storage.ts  system-monitoring-context.tsx  terminal-config.ts
src/locales/: en.json  vi.json
src/styles/: globals.css
tests/: e2e.spec.ts
