[package]
name = "ssh"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "r_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
russh = "0.55"
russh-sftp = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures = "0.3"
tokio-util = "0.7"

# Performance optimization profiles
[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip debug symbols
panic = "abort"        # Smaller binary size

[profile.dev]
opt-level = 0          # No optimization for faster compile
debug = true           # Include debug info

# Optional: Super optimized release
[profile.release-optimized]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = "fat"            # Aggressive LTO
codegen-units = 1
